# surilib

./: CMakeLists.txt  version.txt
core/: ActiveRasterWorldExtentManager.cpp  AddCsvLayerCommandCreator.cpp  AddCsvLayerCommandExecutionHandler.cpp  AddLayerCommandExecutionHandler.cpp  AddRemoteLayerCommandExecutionHandler.cpp  AddTerrainCommandCreator.cpp  AddTerrainCommandExecutionHandler.cpp  AnotationElement.cpp  AnotationElement.h  AnotationElementEditor.cpp  AnotationElementEditor.h  AnotationLayer.cpp  AnotationLayer.h  AspectPreservingWorld.cpp  AspectPreservingWorld.h  BandDriver.cpp  BandDriver.h  BandMathCommandCreator.cpp  BandMathCommandExecutionHandler.cpp  BandMathRenderer.cpp  BandMathRenderer.h  BandMathToolBuilder.cpp  BaseRasterRenderer.cpp  BaseRasterRenderer.h  BatchProcessCommandCreator.cpp  BatchProcessCommandExecutionHandler.cpp  BrightnessRenderer.cpp  BrightnessRenderer.h  BufferOperation.cpp  BufferOperation.h  BufferedDriver.cpp  CMakeFiles.txt  CacheRenderer.cpp  CacheRenderer.h  Camera.cpp  Camera.h  CanAppendRowNotification.cpp  CanAppendRowNotification.h  Canvas.cpp  CategorizedVectorRenderer.cpp  (+579 more)
da/: AuxiliaryFunctions.cpp  BilRasterDriver.cpp  BilRasterDriver.h  BipRasterDriver.cpp  BipRasterDriver.h  BipRasterWriter.cpp  BipRasterWriter.h  BsqRasterDriver.cpp  BsqRasterDriver.h  CMakeFiles.txt  Coordinates.cpp  CoordinatesTransform.cpp  DataAccess.doxyfile  DataTypes.cpp  Decimate.cpp  Decimate.h  DecimateRasterSource.cpp  DecimateRasterSource.h  Dimension.cpp  ElementVectorSerializer.cpp  EnviImage.cpp  EnviImage.h  ExactCoordinatesTransformation.cpp  ExactTransformationFactory.cpp  GdalDriver.cpp  GdalDriver.h  GdalImage.cpp  GdalImage.h  GdalRasterWriter.cpp  GdalRasterWriter.h  GroundControlPoint.cpp  Image.cpp  ImageFactory.cpp  ImageFactory.h  MemoryVector.cpp  MemoryVector.h  PolynomialCoordinatesTransformation.cpp  PolynomialTransformationFactory.cpp  RasterBand.cpp  RasterDriver.cpp  (+24 more)
da/tests/: imagetest.cpp  main.cpp
data/xml/: suriproject.xsd
include/: CallbackView.h  Model.h  View.h  logmacros.h  suri.h  wxmacros.h
include/suri/: AbstractFactory.h  ActivationLogic.h  ActiveRasterWorldExtentManager.h  AddCsvLayerCommandCreator.h  AddCsvLayerCommandExecutionHandler.h  AddLayerCommandExecutionHandler.h  AddRemoteLayerCommandExecutionHandler.h  AddTerrainCommandCreator.h  AddTerrainCommandExecutionHandler.h  AnimationTask.h  AnimationTaskTool.h  AnimationTool.h  AppConfigPartsProviderInterface.h  AppConfigurationWidget.h  Application.h  AttachedTaskConfig.h  AuxiliaryFunctions.h  BandMathCommandCreator.h  BandMathCommandExecutionHandler.h  BandMathProcess.h  BandMathTool.h  BandMathToolBuilder.h  BandStackingProcess.h  BasicLibraryItemSelector.h  BatchProcessCommandCreator.h  BatchProcessCommandExecutionHandler.h  BrightnessTool.h  BufferedDriver.h  Button.h  Canvas.h  Choice.h  Command.h  (+358 more)
resources/: 1-Convolution.xrc  About.xrc  AddColumnPart.xrc  AdjustTool.xrc  AngleMapperParameters.xrc  AnimationTaskTool.xrc  AnimationTool.xrc  AnotationProperties.xrc  BandCombinationSelection.xrc  BandEnhancement.xrc  BandMath.xrc  BandSelection.xrc  Buffer.xrc  C3DToolbar.xrc  CategorizedVectorStytlePart.xrc  ChoiceSelection.xrc  ClassFusion.xrc  ClassMappingTable.xrc  ClassificationClassSelection.xrc  ClassificationOptions.xrc  ClassificationToolbar.xrc  ColorTableSelection.xrc  ConditionalVectorStyle.xrc  ContextMenu.xrc  Convolution.xrc  CoordinateNavigator.xrc  CoregisterOrderSelect.xrc  CoregisterTableToolbar.xrc  CoregisterTool.xrc  CorregisterGcpGeneration.xrc  CsvFormatSelectionPart.xrc  DatumEdition.xrc  DecimalCoordinateInput.xrc  DecimalCoordinateInputPart.xrc  DensitySliceEdition.xrc  DualViewerSelection.xrc  DynamicViewerWidget.xrc  EditCoordinates.xrc  ElementMenu.xrc  EllipsoidEdition.xrc  (+128 more)
test/: CMakeFiles.txt  ColorTableRendererTest.cpp  ColorTableRendererTest.h  EnhancementSelectionTest.cpp  EnhancementSelectionTest.h  EnhancementTests.cpp  EnhancementTests.h  HistogramTest.cpp  HistogramTest.h  KMeansTest.cpp  KMeansTest.h  LatitudeLongitudeInputWidgetTest.cpp  LatitudeLongitudeInputWidgetTest.h  LinearEnhancementTest.cpp  LinearEnhancementTest.h  LookUpTableTest.cpp  LookUpTableTest.h  LutArrayTest.cpp  LutArrayTest.h  LutRendererTest.cpp  LutRendererTest.h  MaxLikelihoodTest.cpp  MaxLikelihoodTest.h  StatisticNodeTest.cpp  StatisticNodeTest.h  VectorTest.cpp  VectorTest.h
tools/: AppFileHeader.txt  CMakeLists.txt  FindCppUnit.cmake  FindMuParser.cmake  FindSuriGdal.cmake  FindSuriLib.cmake  LibFileHeader.txt  Toolchain-mingw32.cmake  UncrustifyApp.cfg  UncrustifyLib.cfg  UseSuriLib.cmake  bootstrap.sh  ci_build.sh  ci_check.sh  cleanup.sh  cpplint.py  etiquette.templates  etiquette_checker.sh  installer.sh  setversion.sh  tanch.sh  translate.sh  unique_define.sh
tools/bootstrap/: Application.doxyfile  CMakeLists.txt  LinuxShortcut.desktop  application.xml  default.apspec  installer.nsi  installer_data.sh
tools/bootstrap/src/: Application.rc  CMakeFiles.txt  Cambios.txt  Leame.txt  Licencia.txt  MainClass.cpp  MainClass.h  configuracion.xml
tools/bootstrap/src/data/ayuda/: about-Application.html  ayuda.hhk  ayuda.hhp
widgets/: AboutPart.cpp  AboutPart.h  AddColumnPart.cpp  AddColumnPart.h  AnimationTask.cpp  AnimationTaskTool.cpp  AnimationTool.cpp  AnotationPropertiesPart.cpp  AnotationPropertiesPart.h  AppConfigurationWidget.cpp  AttachedTaskConfig.cpp  BandCombinationAndEnhancementPart.cpp  BandCombinationAndEnhancementPart.h  BandCombinationSelectionPart.cpp  BandCombinationSelectionPart.h  BandEnhancementPart.cpp  BandEnhancementPart.h  BandInfo.cpp  BandInfo.h  BandMathPart.cpp  BandMathPart.h  BandMathProcess.cpp  BandMathProcessPartProvider.cpp  BandMathProcessPartProvider.h  BandMathTool.cpp  BandSelectionPart.cpp  BandSelectionPart.h  BandStackingProcess.cpp  BasicLibraryItemSelector.cpp  BrightnessTool.cpp  BufferPart.cpp  BufferPart.h  Button.cpp  CMakeFiles.txt  CategorizedVectorStylePart.cpp  CategorizedVectorStylePart.h  CellTableHandler.h  Choice.cpp  ChoiceCommand.cpp  ChoiceSelectionPart.cpp  (+674 more)
(+57 files in other folders)
